// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Avatar Matches snapshot when boolean prop "isOnline" is set to: "false" 1`] = `
<styled.div
  size="large"
>
  <Unknown
    size="large"
  />
  <styled.object
    data="jest-auto-snapshots String Fixture"
    size="large"
    type="image/jpg"
  >
    <styled.img
      alt="jest-auto-snapshots String Fixture"
      size="large"
      src="jest-auto-snapshots String Fixture"
      type="default"
    />
  </styled.object>
</styled.div>
`;

exports[`jest-auto-snapshots > Avatar Matches snapshot when passed all props 1`] = `
<styled.div
  size="large"
>
  <Unknown
    size="large"
  />
  <styled.object
    data="jest-auto-snapshots String Fixture"
    size="large"
    type="image/jpg"
  >
    <styled.img
      alt="jest-auto-snapshots String Fixture"
      size="large"
      src="jest-auto-snapshots String Fixture"
      type="default"
    />
  </styled.object>
</styled.div>
`;

exports[`jest-auto-snapshots > Avatar Matches snapshot when passed only required props 1`] = `
<styled.div
  size="small"
>
  <styled.object
    data="jest-auto-snapshots String Fixture"
    size="small"
    type="image/jpg"
  >
    <styled.img
      alt="jest-auto-snapshots String Fixture"
      size="small"
      src=""
      type="default"
    />
  </styled.object>
</styled.div>
`;
